syntax = "proto3";

                 package cargoDeclaration;
service CargoDeclarationService {
 rpc createCargoDeclaration (CargoDeclarationCreateInput) returns (CargoDeclaration) {}
rpc cargoDeclarations (findManyParams) returns (stream CargoDeclaration) {}
rpc cargoDeclaration (CargoDeclarationWhereUniqueInput) returns (CargoDeclaration) {}
rpc updateCargoDeclaration (CargoDeclarationUpdateInput) returns (CargoDeclaration) {}
rpc deleteCargoDeclaration (CargoDeclarationWhereUniqueInput) returns (CargoDeclaration) {} 
 }
message CargoDeclarationCreateInput {
string abrdFrwrAddrNm = 1;
string abrdFrwrEml = 2;
string abrdFrwrNm = 3;
string abrdFrwrTlphNo = 4;
int32 alBlGcnt = 5;
int32 alCntrGcnt = 6;
int32 alEcntrCnt = 7;
int32 alHblGcnt = 8;
int32 alNtwg = 9;
int32 alPckgGcnt = 10;
int32 alTtwg = 11;
int32 alVhclGcnt = 12;
string apreYnCd = 13;
string arvlDttm = 14;
string atchFileId = 15;
string audtOpinCn = 16;
string bfCagMgmtNo = 17;
string blMdfyTpCd = 18;
string blNo = 19;
string blPblsDt = 20;
string blPtCd = 21;
string blTpCd = 22;
string cagChrcCd = 23;
string cagDcshRgsrMgmtNo = 24;
string cagMgmtNo = 25;
string cagRqstTpCd = 26;
string cagTpCd = 27;
string carrAddrNm = 28;
string carrCd = 29;
string casNo = 30;
int32 cbmVol = 31;
string cherAddrNm = 32;
string cherGvnmNm = 33;
string cherYn = 34;
int32 cmdtAmt = 35;
string cmdtAmtCurrCd = 36;
string cmdtKndCd = 37;
string cnsiAddrNm = 38;
string cnsiEml = 39;
string cnsiNm = 40;
string cnsiTlphNo = 41;
string cnsiTxprIdfyNo = 42;
string cnsiTxprIdfyNoNin = 43;
int32 cntrGcnt = 44;
string coRqstNo = 45;
string coatTrnpYn = 46;
string createdAt = 47;
string delYn = 48;
string dptrDttm = 49;
string dptrPortCd = 50;
string drvrNm = 51;
int32 ecntrWght = 52;
int32 eurFxrt = 53;
string exppnAddrNm = 54;
string exppnEml = 55;
string exppnNm = 56;
string exppnTlphNo = 57;
string exppnTxprIdfyNo = 58;
string exppnTxprIdfyNoNin = 59;
string frstRegstId = 60;
string frstRgsrDttm = 61;
string frwrCd = 62;
string hblNo = 63;
string hdcbTpCd = 64;
string hsCd = 65;
string hsn = 66;
string ibobzCd = 67;
string id = 68;
string imoNo = 69;
string jrsdOrgnCd = 70;
string lastChgDttm = 71;
string lastChprId = 72;
string lastLdunDt = 73;
string lastThrgPortCd = 74;
int32 ldunBlGcnt = 75;
string ldunPortCd = 76;
string ldunRegnCd = 77;
string ldunYn = 78;
int32 lirVol = 79;
string loadRegnCd = 80;
string ltspYn = 81;
string mrn = 82;
string msgPrcsSttsCd = 83;
string msn = 84;
string ntprAddrNm = 85;
string ntprEml = 86;
string ntprNm = 87;
string ntprTlphNo = 88;
int32 ntwg = 89;
int32 pckgGcnt = 90;
string pckgUtCd = 91;
string pdlsNm = 92;
string prpmDfpmCachTpCd = 93;
string realArvlDttm = 94;
string rmrkCn = 95;
string selcTrgtYn = 96;
string sendWay = 97;
int32 shipNttn = 98;
int32 shipTtn = 99;
string shmrCn = 100;
string stvdCd = 101;
string trnhRegnCd = 102;
string trnpMeanCd = 103;
string trnpMethIdfyNo = 104;
string trnpMethLoctNm = 105;
string trnpMethNatCd = 106;
string trnpMethNm = 107;
string trnpMethRgsrDt = 108;
string trnpRferNo = 109;
string trsnCoCd = 110;
string trsnDttm = 111;
int32 ttwg = 112;
string undgGdCd = 113;
string undgId = 114;
string updatedAt = 115;
int32 usdFxrt = 116;
int32 vhclGcnt = 117;
};
message CargoDeclaration {
string abrdFrwrAddrNm = 1;
string abrdFrwrEml = 2;
string abrdFrwrNm = 3;
string abrdFrwrTlphNo = 4;
int32 alBlGcnt = 5;
int32 alCntrGcnt = 6;
int32 alEcntrCnt = 7;
int32 alHblGcnt = 8;
int32 alNtwg = 9;
int32 alPckgGcnt = 10;
int32 alTtwg = 11;
int32 alVhclGcnt = 12;
string apreYnCd = 13;
string arvlDttm = 14;
string atchFileId = 15;
string audtOpinCn = 16;
string bfCagMgmtNo = 17;
string blMdfyTpCd = 18;
string blNo = 19;
string blPblsDt = 20;
string blPtCd = 21;
string blTpCd = 22;
string cagChrcCd = 23;
string cagDcshRgsrMgmtNo = 24;
string cagMgmtNo = 25;
string cagRqstTpCd = 26;
string cagTpCd = 27;
string carrAddrNm = 28;
string carrCd = 29;
string casNo = 30;
int32 cbmVol = 31;
string cherAddrNm = 32;
string cherGvnmNm = 33;
string cherYn = 34;
int32 cmdtAmt = 35;
string cmdtAmtCurrCd = 36;
string cmdtKndCd = 37;
string cnsiAddrNm = 38;
string cnsiEml = 39;
string cnsiNm = 40;
string cnsiTlphNo = 41;
string cnsiTxprIdfyNo = 42;
string cnsiTxprIdfyNoNin = 43;
int32 cntrGcnt = 44;
string coRqstNo = 45;
string coatTrnpYn = 46;
string createdAt = 47;
string delYn = 48;
string dptrDttm = 49;
string dptrPortCd = 50;
string drvrNm = 51;
int32 ecntrWght = 52;
int32 eurFxrt = 53;
string exppnAddrNm = 54;
string exppnEml = 55;
string exppnNm = 56;
string exppnTlphNo = 57;
string exppnTxprIdfyNo = 58;
string exppnTxprIdfyNoNin = 59;
string frstRegstId = 60;
string frstRgsrDttm = 61;
string frwrCd = 62;
string hblNo = 63;
string hdcbTpCd = 64;
string hsCd = 65;
string hsn = 66;
string ibobzCd = 67;
string id = 68;
string imoNo = 69;
string jrsdOrgnCd = 70;
string lastChgDttm = 71;
string lastChprId = 72;
string lastLdunDt = 73;
string lastThrgPortCd = 74;
int32 ldunBlGcnt = 75;
string ldunPortCd = 76;
string ldunRegnCd = 77;
string ldunYn = 78;
int32 lirVol = 79;
string loadRegnCd = 80;
string ltspYn = 81;
string mrn = 82;
string msgPrcsSttsCd = 83;
string msn = 84;
string ntprAddrNm = 85;
string ntprEml = 86;
string ntprNm = 87;
string ntprTlphNo = 88;
int32 ntwg = 89;
int32 pckgGcnt = 90;
string pckgUtCd = 91;
string pdlsNm = 92;
string prpmDfpmCachTpCd = 93;
string realArvlDttm = 94;
string rmrkCn = 95;
string selcTrgtYn = 96;
string sendWay = 97;
int32 shipNttn = 98;
int32 shipTtn = 99;
string shmrCn = 100;
string stvdCd = 101;
string trnhRegnCd = 102;
string trnpMeanCd = 103;
string trnpMethIdfyNo = 104;
string trnpMethLoctNm = 105;
string trnpMethNatCd = 106;
string trnpMethNm = 107;
string trnpMethRgsrDt = 108;
string trnpRferNo = 109;
string trsnCoCd = 110;
string trsnDttm = 111;
int32 ttwg = 112;
string undgGdCd = 113;
string undgId = 114;
string updatedAt = 115;
int32 usdFxrt = 116;
int32 vhclGcnt = 117;
};
message CargoDeclarationWhereUniqueInput {
string abrdFrwrAddrNm = 1;
string abrdFrwrEml = 2;
string abrdFrwrNm = 3;
string abrdFrwrTlphNo = 4;
int32 alBlGcnt = 5;
int32 alCntrGcnt = 6;
int32 alEcntrCnt = 7;
int32 alHblGcnt = 8;
int32 alNtwg = 9;
int32 alPckgGcnt = 10;
int32 alTtwg = 11;
int32 alVhclGcnt = 12;
string apreYnCd = 13;
string arvlDttm = 14;
string atchFileId = 15;
string audtOpinCn = 16;
string bfCagMgmtNo = 17;
string blMdfyTpCd = 18;
string blNo = 19;
string blPblsDt = 20;
string blPtCd = 21;
string blTpCd = 22;
string cagChrcCd = 23;
string cagDcshRgsrMgmtNo = 24;
string cagMgmtNo = 25;
string cagRqstTpCd = 26;
string cagTpCd = 27;
string carrAddrNm = 28;
string carrCd = 29;
string casNo = 30;
int32 cbmVol = 31;
string cherAddrNm = 32;
string cherGvnmNm = 33;
string cherYn = 34;
int32 cmdtAmt = 35;
string cmdtAmtCurrCd = 36;
string cmdtKndCd = 37;
string cnsiAddrNm = 38;
string cnsiEml = 39;
string cnsiNm = 40;
string cnsiTlphNo = 41;
string cnsiTxprIdfyNo = 42;
string cnsiTxprIdfyNoNin = 43;
int32 cntrGcnt = 44;
string coRqstNo = 45;
string coatTrnpYn = 46;
string createdAt = 47;
string delYn = 48;
string dptrDttm = 49;
string dptrPortCd = 50;
string drvrNm = 51;
int32 ecntrWght = 52;
int32 eurFxrt = 53;
string exppnAddrNm = 54;
string exppnEml = 55;
string exppnNm = 56;
string exppnTlphNo = 57;
string exppnTxprIdfyNo = 58;
string exppnTxprIdfyNoNin = 59;
string frstRegstId = 60;
string frstRgsrDttm = 61;
string frwrCd = 62;
string hblNo = 63;
string hdcbTpCd = 64;
string hsCd = 65;
string hsn = 66;
string ibobzCd = 67;
string id = 68;
string imoNo = 69;
string jrsdOrgnCd = 70;
string lastChgDttm = 71;
string lastChprId = 72;
string lastLdunDt = 73;
string lastThrgPortCd = 74;
int32 ldunBlGcnt = 75;
string ldunPortCd = 76;
string ldunRegnCd = 77;
string ldunYn = 78;
int32 lirVol = 79;
string loadRegnCd = 80;
string ltspYn = 81;
string mrn = 82;
string msgPrcsSttsCd = 83;
string msn = 84;
string ntprAddrNm = 85;
string ntprEml = 86;
string ntprNm = 87;
string ntprTlphNo = 88;
int32 ntwg = 89;
int32 pckgGcnt = 90;
string pckgUtCd = 91;
string pdlsNm = 92;
string prpmDfpmCachTpCd = 93;
string realArvlDttm = 94;
string rmrkCn = 95;
string selcTrgtYn = 96;
string sendWay = 97;
int32 shipNttn = 98;
int32 shipTtn = 99;
string shmrCn = 100;
string stvdCd = 101;
string trnhRegnCd = 102;
string trnpMeanCd = 103;
string trnpMethIdfyNo = 104;
string trnpMethLoctNm = 105;
string trnpMethNatCd = 106;
string trnpMethNm = 107;
string trnpMethRgsrDt = 108;
string trnpRferNo = 109;
string trsnCoCd = 110;
string trsnDttm = 111;
int32 ttwg = 112;
string undgGdCd = 113;
string undgId = 114;
string updatedAt = 115;
int32 usdFxrt = 116;
int32 vhclGcnt = 117;
};
message CargoDeclarationUpdateInput {
string abrdFrwrAddrNm = 1;
string abrdFrwrEml = 2;
string abrdFrwrNm = 3;
string abrdFrwrTlphNo = 4;
int32 alBlGcnt = 5;
int32 alCntrGcnt = 6;
int32 alEcntrCnt = 7;
int32 alHblGcnt = 8;
int32 alNtwg = 9;
int32 alPckgGcnt = 10;
int32 alTtwg = 11;
int32 alVhclGcnt = 12;
string apreYnCd = 13;
string arvlDttm = 14;
string atchFileId = 15;
string audtOpinCn = 16;
string bfCagMgmtNo = 17;
string blMdfyTpCd = 18;
string blNo = 19;
string blPblsDt = 20;
string blPtCd = 21;
string blTpCd = 22;
string cagChrcCd = 23;
string cagDcshRgsrMgmtNo = 24;
string cagMgmtNo = 25;
string cagRqstTpCd = 26;
string cagTpCd = 27;
string carrAddrNm = 28;
string carrCd = 29;
string casNo = 30;
int32 cbmVol = 31;
string cherAddrNm = 32;
string cherGvnmNm = 33;
string cherYn = 34;
int32 cmdtAmt = 35;
string cmdtAmtCurrCd = 36;
string cmdtKndCd = 37;
string cnsiAddrNm = 38;
string cnsiEml = 39;
string cnsiNm = 40;
string cnsiTlphNo = 41;
string cnsiTxprIdfyNo = 42;
string cnsiTxprIdfyNoNin = 43;
int32 cntrGcnt = 44;
string coRqstNo = 45;
string coatTrnpYn = 46;
string createdAt = 47;
string delYn = 48;
string dptrDttm = 49;
string dptrPortCd = 50;
string drvrNm = 51;
int32 ecntrWght = 52;
int32 eurFxrt = 53;
string exppnAddrNm = 54;
string exppnEml = 55;
string exppnNm = 56;
string exppnTlphNo = 57;
string exppnTxprIdfyNo = 58;
string exppnTxprIdfyNoNin = 59;
string frstRegstId = 60;
string frstRgsrDttm = 61;
string frwrCd = 62;
string hblNo = 63;
string hdcbTpCd = 64;
string hsCd = 65;
string hsn = 66;
string ibobzCd = 67;
string id = 68;
string imoNo = 69;
string jrsdOrgnCd = 70;
string lastChgDttm = 71;
string lastChprId = 72;
string lastLdunDt = 73;
string lastThrgPortCd = 74;
int32 ldunBlGcnt = 75;
string ldunPortCd = 76;
string ldunRegnCd = 77;
string ldunYn = 78;
int32 lirVol = 79;
string loadRegnCd = 80;
string ltspYn = 81;
string mrn = 82;
string msgPrcsSttsCd = 83;
string msn = 84;
string ntprAddrNm = 85;
string ntprEml = 86;
string ntprNm = 87;
string ntprTlphNo = 88;
int32 ntwg = 89;
int32 pckgGcnt = 90;
string pckgUtCd = 91;
string pdlsNm = 92;
string prpmDfpmCachTpCd = 93;
string realArvlDttm = 94;
string rmrkCn = 95;
string selcTrgtYn = 96;
string sendWay = 97;
int32 shipNttn = 98;
int32 shipTtn = 99;
string shmrCn = 100;
string stvdCd = 101;
string trnhRegnCd = 102;
string trnpMeanCd = 103;
string trnpMethIdfyNo = 104;
string trnpMethLoctNm = 105;
string trnpMethNatCd = 106;
string trnpMethNm = 107;
string trnpMethRgsrDt = 108;
string trnpRferNo = 109;
string trsnCoCd = 110;
string trsnDttm = 111;
int32 ttwg = 112;
string undgGdCd = 113;
string undgId = 114;
string updatedAt = 115;
int32 usdFxrt = 116;
int32 vhclGcnt = 117;
};
message findManyParams {

};